<resources>
    <string name="app_name">Cany</string>
    <string name="type_email">Enter your email</string>
    <string name="type_password">Enter your password</string>
    <string name="access">Access</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="not_registered">Not registered?</string>
    <string name="language_portuguese">Português</string>
    <string name="language_english">English</string>
    <string name="hello_studant">Hello <font color="#00E480">John,</font></string>
    <string name="hello_studant_continue_your_studies">Continue your studies</string>
    <string name="topic_course">Beginners</string>
    <string name="topic_course_choose_model">Choose the module you want to study</string>
    <string name="see_all">See all</string>
    <string name="rv_item_course_title_class">Title Class</string>
    <string name="Beginners">Beginners</string>
    <string name="today">Today</string>
    <string name="trend_is_now">It\'s trend</string>
    <string name="Trending">Trending</string>
    <string name="Programming">Programming</string>
    <string name="register">Register</string>
    <string name="next">NEXT</string>
    <string name="already_has_account">Already have an account? Sing In</string>
    <string name="name">Enter your name</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="welcome_to_cany"><b>WELCOME TO CANY,</b> \n%1$s\n Get access to the full English course, with updated materials every week!</string>
    <string name="cookies">By clicking next, you agree to our Terms, Data Policy and Cookie Policy</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="add_profile_photo_des">How about adding a photo? Don\'t be shy :D</string>
    <string name="okay_beautiful">Okay, I have to admit, you are pretty!</string>
    <string name="add_photo">Add Photo</string>
    <string name="jump_photo">Add Later</string>
    <string name="define_photo_profile">Set profile photo</string>
    <string name="take_picture">Take a picture</string>
    <string name="search_gallery">Choose from library</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="progress">Progress</string>
    <string name="daily">Daily</string>
    <string name="course">Course</string>
    <string name="your_account">Your account</string>
    <string name="account_settings">Here you can manage your account settings</string>
    <string name="your_name">Name</string>
    <string name="john_name">John Kenedy Neves</string>
    <string name="your_email">E-mail</string>
    <string name="john_email">john.kenedy232@gmail.com</string>
    <string name="your_password">Change password</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="subscription">Subscription</string>
    <string name="type_student">Type of student</string>
    <string name="type_subscription">Premium</string>
    <string name="date_subscription">January 15, 2025</string>
    <string name="cancel_subscription">Cancel subscription</string>
    <string name="h_c">Help and contact</string>
    <string name="help_center">Help center</string>
    <string name="leave_review">Leave your review</string>
    <string name="others">Others</string>
    <string name="end_session">End session</string>
    <string name="x">x</string>
    <string name="Documentation">Documentation</string>
    <string name="constancy">Constancy is key!</string>
    <string name="your_course">Your Course</string>
    <string name="similar">similar</string>
</resources>