<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_bottom_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item android:id="@+id/menu_bottom_guide"
        android:title="@string/course"
        android:icon="@drawable/ic_baseline_assessment_24" />

    <item android:id="@+id/menu_bottom_favorites"
        android:title="@string/daily"
        android:icon="@drawable/ic_baseline_favorite_border_24" />

    <item android:id="@+id/menu_bottom_progress"
        android:title="@string/progress"
        android:icon="@drawable/ic_baseline_av_timer_24" />

    <item android:id="@+id/menu_bottom_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_perm_identity_24" />

</menu>