<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_register"
    tools:context=".register.presentation.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/dark_blue"
        android:padding="10dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="15dp"
            android:orientation="vertical"
            tools:context=".register.presentation.RegisterActivity"
            tools:showIn="@layout/activity_register">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:padding="15dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@drawable/perfilphoto" />

            <TextView
                style="@style/CanyTextViewForm"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:layout_marginTop="-10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_profile_photo" />

            <TextView
                style="@style/CanyTextViewForm"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/add_profile_photo_des" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.canytech.cany.common.view.LoadingButton
        android:id="@+id/button_register_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:text="@string/add_photo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register_jump"
        style="@style/ButtonFormLink"
        android:text="@string/jump_photo"
        android:layout_marginTop="0dp"
        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/main_photo_language_bg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="bottom"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_register_registered"
            style="@style/ButtonForm"
            android:layout_gravity="bottom"
            android:layout_marginStart="-25dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="-25dp"
            android:layout_marginBottom="-5dp"
            android:text="@string/okay_beautiful"
            android:textSize="12sp" />

    </FrameLayout>

</LinearLayout>
